--- a/frontend/src/styles/styles.css
+++ b/frontend/src/styles/styles.css
@@ -42,3 +42,10 @@ body {
 	  background-color: green;
 	}
 }
+
+.scoreboard h3 > span {
+	padding: 5px;
+	background: #333;
+	color: #fff;
+	border: 1px solid #333;
+}
